[gd_scene load_steps=6 format=3 uid="uid://cmai1em5qaiot"]

[ext_resource type="Script" path="res://scripts/shop.gd" id="1_2o87i"]
[ext_resource type="Texture2D" uid="uid://ceqgkp6fnp1ya" path="res://assets/SHOP.png" id="1_rwk8n"]
[ext_resource type="FontFile" uid="uid://duga6k6ga873j" path="res://assets/bones.ttf" id="2_lxum0"]
[ext_resource type="PackedScene" uid="uid://cd7iphh8pwgyw" path="res://scenes/next_level.tscn" id="4_03kej"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oig5c"]
size = Vector2(1272.79, 10)

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 860.0
offset_bottom = 471.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.597997, 0.597997)
script = ExtResource("1_2o87i")
left_limit = 0
right_limit = 600
top_limit = 0
bottom_limit = 200

[node name="shop_buttons" type="CanvasLayer" parent="."]
layer = 128

[node name="buy_rum" type="Button" parent="shop_buttons"]
texture_filter = 1
offset_left = 336.0
offset_top = 288.0
offset_right = 471.0
offset_bottom = 315.0
scale = Vector2(1.2085, 1.19985)
theme_override_fonts/font = ExtResource("2_lxum0")
action_mode = 0
text = "Rum-30-Limit-3"

[node name="buy_spring" type="Button" parent="shop_buttons"]
texture_filter = 1
offset_left = 520.0
offset_top = 288.0
offset_right = 636.0
offset_bottom = 315.0
scale = Vector2(1.46872, 1.29885)
theme_override_fonts/font = ExtResource("2_lxum0")
action_mode = 0
text = "Springleg-80"

[node name="buy_wheels" type="Button" parent="shop_buttons"]
texture_filter = 1
offset_left = 720.0
offset_top = 288.0
offset_right = 856.0
offset_bottom = 315.0
scale = Vector2(1.3709, 1.29633)
theme_override_fonts/font = ExtResource("2_lxum0")
action_mode = 0
text = "Wheelboots-80"

[node name="exit_shop" type="Button" parent="shop_buttons"]
offset_left = 1112.0
offset_top = 608.0
offset_right = 1203.0
offset_bottom = 639.0
scale = Vector2(1.64899, 1.8412)
theme_override_fonts/font = ExtResource("2_lxum0")
action_mode = 0
text = "Exit Shop"

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-294.316, 1404.69)
scale = Vector2(2.09906, 20.8636)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(636.393, -5)
shape = SubResource("RectangleShape2D_oig5c")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
texture_filter = 1
position = Vector2(641.124, 358.927)
scale = Vector2(0.658238, 0.636396)
texture = ExtResource("1_rwk8n")

[node name="next_level" parent="." instance=ExtResource("4_03kej")]
position = Vector2(2715.73, 668.9)

[node name="start_position" type="Marker2D" parent="."]
position = Vector2(1056.86, 607.026)

[connection signal="pressed" from="shop_buttons/buy_rum" to="." method="_on_buy_rum_pressed"]
[connection signal="pressed" from="shop_buttons/buy_spring" to="." method="_on_buy_spring_pressed"]
[connection signal="pressed" from="shop_buttons/buy_wheels" to="." method="_on_buy_wheels_pressed"]
[connection signal="pressed" from="shop_buttons/exit_shop" to="." method="_on_exit_shop_pressed"]
